@@ -111,7 +111,10 @@ dependencies {
 
     apiCompile group: 'javax.cache', name: 'cache-api', version: '1.0.0' // ?
     compile group: 'javax.cache', name: 'cache-api', version: '1.0.0' // ?
-    compile group: 'com.hazelcast', name: 'hazelcast', version: '3.6.2' // Apache 2.0
+    // use hazelcast-all so various options are available, not that at least hazelcast-wm is needed for web listener
+    apiCompile group: 'com.hazelcast', name: 'hazelcast-all', version: '3.6.2' // Apache 2.0
+    compile group: 'com.hazelcast', name: 'hazelcast-all', version: '3.6.2' // Apache 2.0
+
     compile group: 'org.freemarker', name: 'freemarker', version: '2.3.24-incubating' // Apache 2.0
 
     compile group: 'org.apache.geronimo.specs', name: 'geronimo-j2ee-connector_1.5_spec', version: '2.0.0' // Apache 2.0
