@@ -3,6 +3,11 @@
                                http://www.hazelcast.com/schema/config/hazelcast-config-3.6.xsd"
            xmlns="http://www.hazelcast.com/schema/config">
 
+    <properties>
+        <property name="hazelcast.logging.type">slf4j</property>
+        <property name="hazelcast.jcache.provider.type">server</property>
+    </properties>
+
     <group><name>dev</name><password>dev-pass</password></group>
     <management-center enabled="false">http://localhost:8080/mancenter</management-center>
     <network>
